Updated character sprites.

--- a/OOP_Bomberman_client_graphics_v1/OOP_Bomberman_client_graphics_v1.csproj
+++ b/OOP_Bomberman_client_graphics_v1/OOP_Bomberman_client_graphics_v1.csproj
@@ -33,6 +33,9 @@
     <None Update="Assets\Textures\Spritesheets\9 idle.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Textures\Spritesheets\fnaf_characters.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Textures\Spritesheets\TX_Player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
