Added character ability to place explosives, but it's laggy.

--- a/OOP_Bomberman_client_graphics_v1/OOP_Bomberman_client_graphics_v1.csproj
+++ b/OOP_Bomberman_client_graphics_v1/OOP_Bomberman_client_graphics_v1.csproj
@@ -47,6 +47,9 @@
     <None Update="Assets\Textures\Sprites\Explodables\Explodable000.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Textures\Sprites\Explosives\da_bomb.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Textures\Sprites\Walls\Wall000.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
