Add observer pattern

--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="GameObjects\Destructables\Crates\" />
+    <Folder Include="Command\" />
   </ItemGroup>
 
 </Project>
