Added sprites, everything works

--- a/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
+++ b/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
@@ -81,6 +81,15 @@
     <None Update="Assets\Textures\Spritesheets\fnaf_characters.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\Textures\Spritesheets\IceTile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Textures\Spritesheets\MudTile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Textures\Spritesheets\PortalTile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Textures\Spritesheets\TX_Player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
