--- a/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
+++ b/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
@@ -14,6 +14,9 @@
 
   <ItemGroup>
     <Folder Include="Assets\Icons\" />
+    <Folder Include="NewFolder1\" />
+    <Folder Include="NewFolder2\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
   <ItemGroup>
