--- a/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
+++ b/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
@@ -9,14 +9,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder1\**" />
+    <Compile Remove="NewFolder2\**" />
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder1\**" />
+    <EmbeddedResource Remove="NewFolder2\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder1\**" />
+    <None Remove="NewFolder2\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Path.cs~RF1347332.TMP" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Assets\Icons\" />
-    <Folder Include="NewFolder1\" />
-    <Folder Include="NewFolder2\" />
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
   <ItemGroup>
