adde LevelFactory time diagnostics

--- a/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
+++ b/OOP_Bomberman_client_graphics_v1/client_graphics.csproj
@@ -51,6 +51,9 @@
     <None Update="Assets\TextFiles\MemoryUsageDiagnostics.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\TextFiles\TimeDiagnostics.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Textures\GUI\6-pixel-heart-4.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
