--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7016;http://localhost:5016",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
